[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen = "0.2.100"

web-sys = { version = "0.3.77", features = [
    "Window",
    "Element",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "ErrorEvent",
    "CloseEvent",
    "console",
    "Storage"
] }
